--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,9 @@
 [metadata]
 name = json2daisy
-version = 0.0.1
+version = 0.1.0
+license = MIT
 author = Electrosmith
-author_email = info@electro-smith.com
+author_email = shensley@electro-smith.com
 description = A utility for generating Daisy board support files from JSON descriptions
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -13,10 +14,14 @@ classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
 
 [options]
-package_dir =
-    = src
+include_package_data = True
+package_dir = 
+  = src
 packages = find:
 python_requires = >=3.7
 
