Added correct dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,7 @@ package_dir =
   = src
 packages = find:
 python_requires = >=3.7
-
+install_requires =
+    Jinja2>=2.11
 [options.packages.find]
 where = src
