deprecate pkg_resources and py37

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,17 +14,20 @@ classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
     Operating System :: OS Independent
-    Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
+    Programming Language :: Python :: 3.12
 
 [options]
 include_package_data = True
 package_dir =
   = src
 packages = find:
-python_requires = >=3.7
+python_requires = >=3.8
 install_requires =
     Jinja2>=2.11
+    importlib-resources; python_version<"3.9"
 [options.packages.find]
 where = src
