some workarounds for py38

--- a/setup.cfg
+++ b/setup.cfg
@@ -28,6 +28,6 @@ packages = find:
 python_requires = >=3.8
 install_requires =
     Jinja2>=2.11
-    importlib-resources; python_version<"3.9"
+    importlib-resources; python_version=="3.8"
 [options.packages.find]
 where = src
