up patch version

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = json2daisy
-version = 0.4.2
+name = wstd2daisy
+version = 0.5.1
 license = MIT
 author = Electrosmith
 author_email = shensley@electro-smith.com
